# slurm-scredits

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  scredits-crontab-script.sh  setup.py
scredits/: __init__.py  cli.py  config.py  scredits.py
